@@ -14,6 +14,8 @@ Version 1.0
 
 - Handle format specifications in the Perl lexer.
 
+- Fix comment handling in the Batch lexer.
+
 - Add more file name extensions for the C++, INI and XML lexers.
 
 - Fixes in the IRC and MuPad lexers.
